--- a/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
+++ b/Client/Dt.Base/Structure/Tools/LocalDbView.xaml
@@ -19,7 +19,7 @@
                             </Grid.ColumnDefinitions>
                             <StackPanel VerticalAlignment="Center">
                                 <a:Dot ID="name" />
-                                <a:Dot ID="info" FontSize="12" Foreground="{StaticResource 深灰边框}" />
+                                <a:Dot ID="info" Font="小灰" />
                             </StackPanel>
                             <Button Content="备份" Click="OnBackup" VerticalAlignment="Center" Grid.Column="1" />
                             <Button Content="分享" Click="OnShare" VerticalAlignment="Center" Grid.Column="2" />
