--- a/Client/Dt.Sample/ListView/LvList.xaml
+++ b/Client/Dt.Sample/ListView/LvList.xaml
@@ -38,7 +38,7 @@
                             <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
                                 <a:Dot ID="shenfenzh" />
                                 <a:Dot ID="bumen" Foreground="White" Background="Gray" HorizontalAlignment="Left" Padding="10,0,10,0" />
-                                <a:Dot ID="note" Foreground="{StaticResource 深灰边框}" FontSize="12" />
+                                <a:Dot ID="note" Font="小灰" />
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
