--- a/Client/Dt.App/Publish/Edit/KeywordMgr.xaml
+++ b/Client/Dt.App/Publish/Edit/KeywordMgr.xaml
@@ -34,8 +34,8 @@
                         <StackPanel Padding="10">
                             <a:Dot ID="id" />
                             <StackPanel Orientation="Horizontal">
-                                <a:Dot ID="Creator" Foreground="{StaticResource 深灰边框}" FontSize="12" />
-                                <a:Dot ID="Ctime" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="20,0,0,0" />
+                                <a:Dot ID="Creator" Font="小灰" />
+                                <a:Dot ID="Ctime" Font="小灰" Margin="20,0,0,0" />
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
