--- a/Client/Dt.App/Publish/Edit/PostMgr.xaml
+++ b/Client/Dt.App/Publish/Edit/PostMgr.xaml
@@ -25,19 +25,19 @@
                             <StackPanel Padding="10">
                                 <a:Dot ID="Title" />
                                 <StackPanel Orientation="Horizontal" Spacing="30" Padding="0,10,0,0">
-                                    <a:Dot ID="Creator" Foreground="{StaticResource 深灰边框}" FontSize="12" />
-                                    <a:Dot ID="Ctime" Foreground="{StaticResource 深灰边框}" FontSize="12" />
+                                    <a:Dot ID="Creator" Font="小灰" />
+                                    <a:Dot ID="Ctime" Font="小灰" />
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="&#xE062;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
-                                        <a:Dot ID="ReadCount" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="4,0,0,0" />
+                                        <a:Dot ID="ReadCount" Font="小灰" Margin="4,0,0,0" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="&#xE07F;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" />
-                                        <a:Dot ID="CommentCount" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="4,0,0,0" />
+                                        <a:Dot ID="CommentCount" Font="小灰" Margin="4,0,0,0" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
                                         <a:Dot ID="IsPublish" UIType="CheckBox" Foreground="{StaticResource 深灰边框}" />
-                                        <TextBlock Text="发布" VerticalAlignment="Center" Foreground="{StaticResource 深灰边框}" FontSize="12" Margin="4,0,0,0" />
+                                        <TextBlock Text="发布" VerticalAlignment="Center" Style="{StaticResource 小灰}" Margin="4,0,0,0" />
                                     </StackPanel>
                                 </StackPanel>
                             </StackPanel>
