--- a/Client/Dt.Base/Report/Design/DataSource/ScriptDataWin.xaml
+++ b/Client/Dt.Base/Report/Design/DataSource/ScriptDataWin.xaml
@@ -12,7 +12,7 @@
                     <DataTemplate>
                         <StackPanel Padding="10">
                             <a:Dot ID="name" />
-                            <a:Dot ID="cols" Foreground="{StaticResource 深灰边框}" FontSize="12" />
+                            <a:Dot ID="cols" Font="小灰" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
