--- a/Client/Dt.Sample/ListView/LvListSelector.xaml
+++ b/Client/Dt.Sample/ListView/LvListSelector.xaml
@@ -13,8 +13,8 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <a:Dot ID="xm" FontSize="12" Foreground="{StaticResource 深灰边框}" />
-                <a:Dot ID="chushengrq" Foreground="{StaticResource 深灰边框}" FontSize="12" HorizontalAlignment="Right"/>
+                <a:Dot ID="xm" Font="小灰" />
+                <a:Dot ID="chushengrq" Font="小灰" HorizontalAlignment="Right"/>
                 <Border Background="{StaticResource 主题蓝色}" BorderThickness="0" Padding="10,6" Grid.Row="1">
                     <a:Dot ID="note" Foreground="White" />
                 </Border>
@@ -38,7 +38,7 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <a:Dot ID="xm" FontSize="12" Foreground="{StaticResource 深灰边框}" />
+                <a:Dot ID="xm" Font="小灰" />
                 <Path Data="M0,0 L4,8 L20,8"
                       Fill="{StaticResource 绿色背景}"
                       StrokeThickness="0"
@@ -52,7 +52,7 @@
                 <Border Background="{StaticResource 绿色背景}" BorderThickness="0" Padding="10,6" Grid.Row="2">
                     <a:Dot ID="note" Foreground="White" />
                 </Border>
-                <a:Dot ID="chushengrq" Foreground="{StaticResource 深灰边框}" FontSize="12" Grid.Row="3"/>
+                <a:Dot ID="chushengrq" Font="小灰" Grid.Row="3"/>
             </Grid>
         </DataTemplate>
     </a:Win.Resources>
