--- a/Client/Dt.App/Publish/Edit/PostMgr.xaml
+++ b/Client/Dt.App/Publish/Edit/PostMgr.xaml
@@ -36,7 +36,7 @@
                                         <a:Dot ID="CommentCount" Font="小灰" Margin="4,0,0,0" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
-                                        <a:Dot ID="IsPublish" UIType="CheckBox" Foreground="{StaticResource 深灰边框}" />
+                                        <a:Dot ID="IsPublish" UI="CheckBox" Foreground="{StaticResource 深灰边框}" />
                                         <TextBlock Text="发布" VerticalAlignment="Center" Style="{StaticResource 小灰}" Margin="4,0,0,0" />
                                     </StackPanel>
                                 </StackPanel>
