--- a/Client/Dt.Base/Chat/Parts/ChatList.xaml
+++ b/Client/Dt.Base/Chat/Parts/ChatList.xaml
@@ -16,7 +16,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <a:Dot ID="photo" UIType="Image" Width="50" Height="50" Margin="0,0,10,0" />
+                <a:Dot ID="photo" UI="Image" Width="50" Height="50" Margin="0,0,10,0" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -26,7 +26,7 @@
                         </Grid.ColumnDefinitions>
                         <a:Dot ID="OtherName" />
                         <Ellipse Visibility="{Binding [Unread], Converter={StaticResource CvBoolToVisible}}" Fill="Red" Height="8" Width="8" Margin="4,4,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" />
-                        <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" Style="{StaticResource 小灰}" VerticalAlignment="Center" Grid.Column="2" />
+                        <a:Dot ID="stime" UI="AutoDate" Font="小灰" VerticalAlignment="Center" Grid.Column="2" />
                     </Grid>
                     <a:Dot ID="msg" Font="小灰" Height="18" />
                 </StackPanel>
