--- a/Client/Dt.App/Home/DefaultLogin.xaml
+++ b/Client/Dt.App/Home/DefaultLogin.xaml
@@ -6,10 +6,11 @@
 
     <Page.Resources>
         <Style x:Key="LoginButton" TargetType="Button">
+            <Setter Property="FontSize" Value="{StaticResource 默认字}"/>
             <Setter Property="Foreground" Value="White" />
             <Setter Property="BorderBrush" Value="White" />
             <Setter Property="Background" Value="{StaticResource 深暗遮罩}" />
-            <Setter Property="Padding" Value="14,8,14,8" />
+            <Setter Property="Padding" Value="10,7,10,7" />
         </Style>
     </Page.Resources>
     
@@ -41,14 +42,14 @@
         </Grid>
 
         <StackPanel x:Name="LoginPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="2">
-            <TextBox x:Name="_tbPhone" PlaceholderText="手机号" KeyDown="OnPhoneKeyDown" Padding="10,8,10,8" InputScope="Number" />
-            <PasswordBox x:Name="_tbPwd" PlaceholderText="密码" KeyDown="OnPwdKeyDown" Margin="0,10,0,0" Padding="10,8,10,8" Visibility="Collapsed" />
+            <TextBox x:Name="_tbPhone" PlaceholderText="手机号" KeyDown="OnPhoneKeyDown" InputScope="Number" />
+            <PasswordBox x:Name="_tbPwd" PlaceholderText="密码" KeyDown="OnPwdKeyDown" Margin="0,10,0,0" Visibility="Collapsed" />
             <Grid x:Name="_pnlCode" Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="_tbCode" PlaceholderText="验证码" Padding="10,8,10,8" InputScope="Number" />
+                <TextBox x:Name="_tbCode" PlaceholderText="验证码" InputScope="Number" />
                 <Button x:Name="_btnCode" Content="获取验证码" Click="OnGetCode" Margin="10,0,0,0" Style="{StaticResource LoginButton}" Grid.Column="1" />
             </Grid>
             <Button Content="登　　录" Click="OnLoginClick" HorizontalAlignment="Stretch" Margin="0,20,0,20" Style="{StaticResource LoginButton}" />
